[package]
name = "norn"
version = "0.1.0"
edition = "2021"
description = "Safe, idiomatic Rust bindings to libnorn — TCP/UDP addressed by public key"
license = "MIT"

[dependencies]
norn-sys = { path = "../norn-sys", version = "0.1.0" }
tokio = { version = "1", optional = true, default-features = false }

[features]
default = []
# Expose a norn stream as tokio AsyncRead + AsyncWrite (pulls in tokio).
tokio = ["dep:tokio"]

[lib]
doctest = false
